# xptools

./: .gitattributes  .gitignore  .gitmodules  Building.md  CMakeLists.txt  CMakeUserPresets.json  DSFTools.mcp  Makefile  Makefile.boost  Makefile.cgal  Makefile.expat  Makefile.freetype  Makefile.libpng  Makefile.libsquish  Makefile.libtiff  Makefile.master  Makefile.mpfr  Makefile.mpir  Makefile.zlib  NGS.mcp  ObjEdit.mcp  ObjTools.mcp  README.WorldEditor  README.md  README.txt  Shadow.mcp  TigerTools.mcp  XPExporter.mcp  buildres.sh  conanfile.txt  environment.mk  libs.mcp  make_tools_ac3d.sh  make_tools_dsf2text.sh  make_tools_src.sh  make_tools_wed.sh  package.sh  tounix.sh  xptools.spec
libsrc/dime/: AUTHORS  COPYING  ChangeLog  ChangeLog.sh  FAQ  Makefile.am  Makefile.in  NEWS  README  README.WIN32  TODO  aclocal.m4  bootstrap  configure  configure.ac  dime.cfg.in
libsrc/dime/build-tmake/: common.pro  dime.pro  makefile  mt.pro  release.pro
libsrc/dime/cfg/: ltmain.sh  wrapmsvc.cpp
libsrc/dime/contrib/: README  dime.dsw  dime.mcp  dxf2vrml.dsw  dxf2vrml.mcp
libsrc/dime/docs/: announcement-0_9.txt  dime.dox  doxyfooter.html  doxyheader.html  todo.txt
libsrc/dime/dxf2vrml/: Makefile.am  Makefile.in  dxf2vrml.cpp  makefile.generic
libsrc/dime/dxfsphere/: Makefile.am  Makefile.in  dxfsphere.cpp
libsrc/dime/include/: config.h.in
libsrc/dime/include/dime/: Base.h  Basic.h  Input.h  Layer.h  Model.h  Output.h  RecordHolder.h  State.h
libsrc/dime/src/: Base.cpp  Basic.cpp  Input.cpp  Layer.cpp  Makefile.am  Makefile.in  Model.cpp  Output.cpp  RecordHolder.cpp  State.cpp
libsrc/dime/src/classes/: Class.cpp  Makefile.am  Makefile.in  UnknownClass.cpp
libsrc/dime/src/convert/: 3dfaceconvert.cpp  Makefile.am  Makefile.in  arcconvert.cpp  circleconvert.cpp  convert.cpp  convert_funcs.h  ellipseconvert.cpp  layerdata.cpp  lineconvert.cpp  linesegment.cpp  linesegment.h  lwpolylineconvert.cpp  pointconvert.cpp  polylineconvert.cpp  solidconvert.cpp  traceconvert.cpp
libsrc/dime/src/entities/: 3DFace.cpp  Arc.cpp  Block.cpp  Circle.cpp  Ellipse.cpp  Entity.cpp  ExtrusionEntity.cpp  FaceEntity.cpp  Insert.cpp  LWPolyline.cpp  Line.cpp  Makefile.am  Makefile.in  Point.cpp  Polyline.cpp  Solid.cpp  Spline.cpp  Trace.cpp  UnknownEntity.cpp  Vertex.cpp
libsrc/dime/src/objects/: Makefile.am  Makefile.in  Object.cpp  UnknownObject.cpp
libsrc/dime/src/records/: DoubleRecord.cpp  FloatRecord.cpp  HexRecord.cpp  Int16Record.cpp  Int32Record.cpp  Int8Record.cpp  Makefile.am  Makefile.in  Record.cpp  StringRecord.cpp
libsrc/dime/src/sections/: BlocksSection.cpp  ClassesSection.cpp  EntitiesSection.cpp  HeaderSection.cpp  Makefile.am  Makefile.in  ObjectsSection.cpp  Section.cpp  TablesSection.cpp  UnknownSection.cpp
libsrc/dime/src/tables/: LayerTable.cpp  Makefile.am  Makefile.in  Table.cpp  TableEntry.cpp  UCSTable.cpp  UnknownTable.cpp
libsrc/dime/src/util/: Array.cpp  BSPTree.cpp  Box.cpp  Dict.cpp  Linear.cpp  Makefile.am  Makefile.in  MemHandler.cpp
libsrc/lib3ds-1.2.0/: ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  config.h  config.h.in  configure  configure.in  lib3ds-config.1  lib3ds.m4  lib3ds.spec  mkinstalldirs
libsrc/lib3ds-1.2.0/examples/: 3ds2rib.c  Makefile.am  Makefile.in  glstub.h.in  player.c
libsrc/lib3ds-1.2.0/lib3ds/: Makefile.am  Makefile.in  atmosphere.c  atmosphere.h  background.c  background.h  camera.c  camera.h  chunk.c  chunk.h  chunktable.sed  ease.c  ease.h  file.c  file.h  float.c  float.h  io.c  io.h  light.c  light.h  material.c  material.h  matrix.c  matrix.h  mesh.c  mesh.h  node.c  node.h  quat.c  quat.h  shadow.c  shadow.h  tcb.c  tcb.h  tracks.c  tracks.h  types.h  types.txt  vector.c  (+3 more)
libsrc/lib3ds-1.2.0/msvc/: 3ds2m.dsp  3ds2rib.dsp  3dsdump.dsp  Makefile.am  Makefile.in  all.dsp  lib3ds.dsw  lib3ds_dll.dsp  lib3ds_lib.dsp  player.dsp
libsrc/lib3ds-1.2.0/tools/: 3ds2m.1  3ds2m.c  3dsdump.1  3dsdump.c  Makefile.am  Makefile.in
libsrc/sdts++-1.5.1/: AUTHORS  COPYING  ChangeLog  Jamfile  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  boost-build.jam  configure  configure.in  libtool  ltmain.sh
libsrc/sdts++-1.5.1/Windows/: Makefile  Makefile.am  Makefile.in  all.dsw  getopt.c  getopt.dsp  getopt.h  unistd.h
libsrc/sdts++-1.5.1/Windows/container_t/: container_t.dsp
libsrc/sdts++-1.5.1/Windows/prsdts/: prsdts.dsp
libsrc/sdts++-1.5.1/Windows/sb_Directory_t/: sb_Directory_t.dsp
libsrc/sdts++-1.5.1/Windows/sb_ForeignID_t/: sb_ForeignID_t.dsp  sb_ForeignID_t.dsw
libsrc/sdts++-1.5.1/Windows/sb_accessor_t/: sb_accessor_t.dsp  sb_accessor_t.dsw
libsrc/sdts++-1.5.1/Windows/sb_arc_t/: sb_arc_t.dsp  sb_arc_t.dsw
libsrc/sdts++-1.5.1/Windows/sb_catd_t/: sb_catd_t.dsp  sb_catd_t.dsw
libsrc/sdts++-1.5.1/Windows/sb_cats_t/: sb_cats_t.dsp  sb_cats_t.dsw
libsrc/sdts++-1.5.1/Windows/sb_cell_t/: sb_cell_t.dsp  sb_cell_t.dsw
libsrc/sdts++-1.5.1/Windows/sb_comp_t/: sb_comp_t.dsp  (+1 more)
libsrc/sdts++-1.5.1/contrib/: Makefile  Makefile.am  Makefile.in
libsrc/sdts++-1.5.1/doc/: Makefile.am  Makefile.in  README  SDTS++FAQ  sdts++.html  sdts++.info  sdts++.texi  sdts.ood
libsrc/sdts++-1.5.1/sdts++/: Jamfile  Makefile.am  Makefile.in
libsrc/sdts++-1.5.1/sysutils/: Jamfile  Makefile  Makefile.am  Makefile.in  config.status  configure  configure.in  fileutils.cpp  fileutils.h  stringutils.cpp  stringutils.h  t_basename  t_basename.cpp  t_dirname  t_dirname.cpp  t_stringutils  t_stringutils.cpp
libsrc/sdts++-1.5.1/tests/: .jamdeps  Jamfile  Makefile  Makefile.am  Makefile.in  abcdcatd.ddf  abcdcell.ddf  abcdcomp.ddf  abcdiden.ddf  abcdpnts.ddf  abcdpoly.ddf  container_t.cpp  foo.ddf  mktest.pl  sb_Directory_t.cpp  sb_ForeignID_t.cpp  sb_Spatial_t.cpp  sb_accessor_t.cpp  sb_arc_t.cpp  sb_catd_t.cpp  sb_cats_t.cpp  sb_cell_t.cpp  sb_comp_t.cpp  sb_dddf_t.cpp  sb_ddom_t.cpp  sb_ddsh_t.cpp  sb_iden_t.cpp  sb_iref_t.cpp  sb_line_t.cpp  sb_pnts_t.cpp  sb_poly_t.cpp  sb_ring_t.cpp  sb_spdm_t.cpp  sb_utils_t.cpp  sb_xref_t.cpp  sc_Field_t.cpp  sc_MultiTypeValue_t.cpp  sc_Subfield_t.cpp  sh_8211_t  sh_Accessor_t  (+29 more)
(+8894 files in other folders)
