dnl
dnl $Id: configure.in,v 1.50 2003/06/10 18:39:04 mcoletti Exp $
dnl

AC_INIT
AC_CONFIG_SRCDIR([sdts++/container/sc_Module.h])


AM_INIT_AUTOMAKE([sdts++],[1.5.1])


AC_PROG_MAKE_SET

AC_PREFIX_PROGRAM(gcc)

AC_PROG_CC
AC_PROG_CXX
AC_PROG_CXXCPP

AC_LANG([C++])

AC_PROG_LIBTOOL

AC_HEADER_STAT

dnl
dnl see if std::vector<char>::iterator == char *
dnl
AC_COMPILE_IFELSE([AC_LANG_PROGRAM([[#include <vector>]], [[
char v[2];
std::vector<char>::iterator i = &v[0];
]])],[],[AC_DEFINE(VECTOR_ITERATOR_POINTER_NOT_EQUIVALENT) ])

dnl program checks

AM_PROG_LEX
AC_PROG_YACC
AC_PROG_INSTALL

AM_PROG_CC_C_O

AM_MAINTAINER_MODE

dnl
dnl for getopt()
dnl

AC_CHECK_HEADERS(unistd.h)


dnl
dnl for DBL_MAX constant
dnl

AC_CHECK_HEADERS(float.h)
 

dnl
dnl Look for the Boost C++ class template header files
dnl

AC_ARG_WITH( boost, 
             [  --with-boost=path       path to Boost C++ class library headers],
             BOOST_PATH="$withval" )

if test $BOOST_PATH ; then
  SAVED_CPPFLAGS=${CPPFLAGS}
  CPPFLAGS="-I${BOOST_PATH} $CPPFLAGS";
fi


dnl
dnl need to add this so that Boost headers can be found
dnl

CPPFLAGS="${CPPFLAGS} -I${prefix}/include"
export CPPFLAGS


AC_CHECK_HEADERS( boost/smart_ptr.hpp , , AC_MSG_ERROR(No Boost C++ library -- get from http://www.boost.org/) )

CPPFLAGS=$SAVED_CPPFLAGS


dnl Set to reasonable looking default if user didn't manually select
dnl location of Boost headers

if test -z "$BOOST_PATH" ; then
  BOOST_HEADER=${includedir}
else
  BOOST_HEADER=$BOOST_PATH
fi
export BOOST_HEADER



dnl
dnl let's make sure the sysutils package is happy
dnl



echo "
Configuration:
  Install path:               ${prefix}
  Boost path:                 ${BOOST_PATH}
  Include dir:                ${includedir}"




AC_SUBST(CPPFLAGS)
AC_SUBST(CFLAGS)
AC_SUBST(DEFS)
AC_SUBST(CXX)
AC_SUBST(LIBS)
AC_SUBST(LEXLIB)
AC_SUBST(BOOST_HEADER)


AC_CONFIG_SUBDIRS(sysutils)


AC_CONFIG_FILES([Makefile doc/Makefile contrib/Makefile contrib/pr8211/Makefile contrib/prsdts/Makefile contrib/mksdts/Makefile contrib/mkstat/Makefile contrib/tomksdts/Makefile contrib/sdtsdem2xyz/Makefile tests/Makefile sdts++/Makefile Windows/Makefile ])
AC_OUTPUT

